--- a/react-aws-server/pom.xml
+++ b/react-aws-server/pom.xml
@@ -60,13 +60,19 @@
 		<version>3.5.0</version>
 	</dependency>
 
+
+
 	<dependency>
   <groupId>org.postgresql</groupId>
   <artifactId>postgresql</artifactId>
   <version>42.5.0</version>  <!-- or latest stable version -->
 </dependency>
 
-
+	<dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+           	<version>2.31.61</version>
+    </dependency>
 
 	</dependencies>
 
