--- a/react-aws-server/src/main/resources/application.properties
+++ b/react-aws-server/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:postgresql://postgres:5432/mydb
 spring.datasource.username=myuser
 spring.datasource.password=mypass
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+ 
+logging.level.org.springframework.web=DEBUG
+
+aws.region=eu-west-2
