--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,6 @@ services:
   backend:
     build:
       context: ./react-aws-server
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydb
-      SPRING_DATASOURCE_USERNAME: myuser
-      SPRING_DATASOURCE_PASSWORD: mypass
     ports:
       - "8080:8080"
     depends_on:
@@ -32,6 +28,8 @@ services:
         - action: rebuild
           path: ./react-aws-server
           target: /app
+    env_file:
+      - .env
 
   frontend:
     build:
@@ -45,6 +43,11 @@ services:
       - node_modules:/app/node_modules
     networks:
       - db
+    develop:
+      watch:
+        - action: rebuild
+          path: ./react-aws
+          target: /app
 networks:
   db:
     driver: bridge
